fix dark mode bugs

--- a/src/index.css
+++ b/src/index.css
@@ -58,16 +58,12 @@ video {
   }
 }
 
-html {
+body, html {
   background-color: white;
   font-family: SFMono-Regular, ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-feature-settings: normal;
   font-variation-settings: normal;
   font-size: 1em;
-}
-
-html.dark {
-  background-color: #121212;
 }
 
 video::-webkit-media-controls-panel {
